# UTCTF-23

./: README.md
betta/misc-zipper/: Dockerfile  README.md  challenge.yml  docker-compose.yml  exploit.py  flag.txt  start.sh
betta/network-misc-p1/: Dockerfile  challenge.yml  docker-compose.yml  smb.conf  writeup.md
guppy/misc-calculator/: Dockerfile  challenge.yml  docker-compose.yml  sudoers  writeup.md
guppy/misc-calculator/webserver/: Cargo.toml
guppy/misc-calculator/webserver/src/: main.rs
guppy/misc-calculator/webserver/templates/: index.html
guppy/pwn-bingchilling/: Dockerfile  README.md  challenge.yml  compile.sh  docker-compose.yml  solution.py  start.sh  test.c
guppy/web-confession/: Dockerfile  challenge.yml  confessions.db  docker-compose.yml  main.py  writeup.md
guppy/web-unmarked-key/: .gitignore  Dockerfile  README.md  challenge.yml  docker-compose.yml  solution.js
puffer/crypto-affinity/: Dockerfile  README.md  challenge.yml  docker-compose.yml  encrypt.py  exploit.py  start.sh
puffer/crypto-looks-wrong-tom-e/: Dockerfile  challenge.yml  docker-compose.yaml  flag.txt  flag2.txt  solve.py  start.sh  writeup.txt
puffer/crypto-provably-insecure/: Dockerfile  challenge.yml  docker-compose.yaml  flag.txt  writeup.txt
puffer/pwn-printfail/: Makefile  README.md  challenge.yml  docker-compose.yml  solution.py
puffer/pwn-sandbox/: README.md
unhosted/forensics-blur/: challenge.yml  page.html  writeup.md
unhosted/forensics-easy-volatility/: README.md  challenge.yml
unhosted/forensics-email/: README.md  challenge.yml  phishing.eml
(+49 files in other folders)
